* Fixed misaligned footer icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3757,9 +3757,12 @@
 		}
 
 /* Footer */
-
+#footer .inner h2{
+	display: none;
+}
 	#footer .inner {
-		padding: 5em 0 3em 0 ;
+		/*padding: 5em 0 3em 0 ;*/
+		padding: 2em 0 0 0;*/
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3794,6 +3797,9 @@
 			width: 100%;
 			text-align: center;
 		}
+		#footer .inner div.contact a:first-child{
+			margin-left: 0;
+		}
 		#footer .inner div.contact a{
 			line-height: 1;
 			margin-left: 1em;
@@ -3801,6 +3807,7 @@
 			padding: 0;
 			text-decoration: none;
 		}
+		
 		#footer .inner div.contact a:hover{
 			text-decoration: none;
 		}
